terraform/dev/yml_manifests/order-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongo-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
        - name: order-mongo
          image: mongo
