terraform/dev/yml_manifests/payment-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongo-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: payment-mongo
          image: mongo
