terraform/dev/yml_manifests/kafka-broker-srv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
  name: kafka-service
  namespace: default
spec:
  ports:
  - port: 9092
  selector:
    app: kafka-broker
