terraform/dev/yml_manifests/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: order-service
      protocol: TCP
      port: 3002
      targetPort: 3002
