terraform/dev/yml_manifests/payment-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-srv
  namespace: default
spec:
  selector:
    app: payment-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
