terraform/dev/yml_manifests/payment-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - name: payment-service
      protocol: TCP
      port: 3003
      targetPort: 3003
