terraform/dev/yml_manifests/sneaker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sneaker-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: sneaker-service
  ports:
    - name: sneaker-service
      protocol: TCP
      port: 3001
      targetPort: 3001
