terraform/dev/yml_manifests/zipkin-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: zipkin-service
      protocol: TCP
      port: 9411
      targetPort: 9411
  selector:
    app: zipkin
