terraform/dev/yml_manifests/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/sneakers/?(.*)
            pathType: Prefix
            backend:
              service:
                name: sneaker-srv
                port:
                  number: 3001
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 3002
          - path: /api-docs/sneakers/?(.*)
            pathType: Prefix
            backend:
              service:
                name: sneaker-srv
                port:
                  number: 3001
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 3003
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin-service
                port:
                  number: 9411
